mgr: respawn with the original path if available

This avoids incompatibilities with libraries that have been replaced
during upgrade.

Fixes: https://tracker.ceph.com/issues/41513
Signed-off-by: Josh Durgin <jdurgin@redhat.com>